<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="Home"
        android:icon="@drawable/home"/>

    <item
        android:id="@+id/taskFragment"
        android:title="Tasks"
        android:icon="@drawable/tasks"/>

    <item
        android:id="@+id/redeemFragment"
        android:title="Redeem"
        android:icon="@drawable/redeem"/>

    <item
        android:id="@+id/settingsFragment"
        android:title="Settings"
        android:icon="@drawable/settings"/>
</menu>