<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@android:drawable/dialog_holo_light_frame"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/descriptionTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_description"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rewardTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coin_reward"
            android:textColor="@color/dark_green" />
    </LinearLayout>

    <Button
        android:id="@+id/passBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_task"
        android:layout_marginRight="4dp"
        app:backgroundTint="@color/cyan"
        android:visibility="visible"/>

    <Button
        android:id="@+id/actionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action"
        android:visibility="visible"
        app:backgroundTint="@color/button_color_selector" />

</LinearLayout>