...
        android:textColor="#4CAF50"
        android:gravity="center"
        android:padding="8dp"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTasks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="8dp"/>
        <!--acts as a container that will "inflate" and display-->
        <!--multiple instances of item_task.xml (one for each task)-->
...
