<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:id="@+id/itemContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="8dp">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@android:drawable/ic_menu_gallery"
            android:scaleType="fitCenter"/>

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_to_redeem"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_to_redeem"
            android:textColor="@color/dark_green"
            android:textSize="12sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/itemStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_status"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="12sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>